chore(frontend): add comments

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,25 @@
+# base node image
 FROM node:18-alpine
-RUN mkdir -p /home/node/server/node_modules && chown -R node:node /home/node/server
+
+# set for base and all layer that inherit from it
+ENV NODE_ENV production
+
+# create node_modules folder ang grant write permission to "node" user
+RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+
+# setting the work directory
 WORKDIR /home/node/app
+
+# copy package.json -> workdir
 COPY package*.json ./
+
+# installing dependencies
 RUN npm install
+
+# grant permission to "node" user
 COPY --chown=node:node . .
-RUN npm run build # will build remix app
-ENV NODE_ENV=production
-CMD ["npm", “run” ,"start"]
+
+# will build remix app
+RUN npm run build 
+
+CMD ["npm", "run" ,"start"]
