--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
 version: "3"
 services:
   frontend:
-    build: ./frontend
+    container_name: clockdown-remixrun
+    # represent the docker image (./frontend/Dockerfile)
+    build: frontend
+    restart: always
     depends_on:
       - backend
     command: "npm run start"
-    working_dir: /home/remix/app
+    working_dir: /home/node/app
     environment:
       - NODE_ENV=production
     expose:
@@ -14,11 +17,13 @@ services:
       - "5000:3000"
 
   backend:
-    build: ./backend
+    container_name: clockdown-backend
+    build: backend
+    restart: always
     depends_on:
       - postgres
     command: "npm run start"
-    working_dir: /home/node/app
+    working_dir: /home/node/server
     environment:
       - NODE_ENV=production
     expose:
@@ -31,6 +36,7 @@ services:
   # to  `host: "postgres"` that value is mapped on the network to the
   # address of this container.
   postgres:
+    container_name: clockdown-postgres
     image: postgres:14.1-alpine
     restart: always
     environment:
@@ -43,12 +49,15 @@ services:
       - POSTGRES_DB=root
     ports:
       # Standard port for PostgreSQL databases
-      - "5432:5432"
-    volumes:
+      - "3254:5432"
+      #   volumes:
       # When the PostgresSQL container is started it will run any scripts
       # provided in the `docker-entrypoint-initdb.d` directory, this connects
       # our seed file to that directory so that it gets run
-      - ./database-seed.sql:/docker-entrypoint-initdb.d/database-seed.sql
+      # - ./database-seed.sql:/docker-entrypoint-initdb.d/database-seed.sql
+    volumes:
+      #- ./data:/data/db
+      - postgres-dbdata:/data/db
 
   # PostgreSQL pgAdmin panel accessible at http://localhost:16543/
   pgadmin-compose:
