feat: make frontend run

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,52 @@
 # base node image
-FROM node:18-alpine
+FROM node:16-bullseye-slim as base
 
 # set for base and all layer that inherit from it
 ENV NODE_ENV production
 
-# create node_modules folder ang grant write permission to "node" user
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+# Install openssl for Prisma
+# RUN apt-get update && apt-get install -y openssl
 
-# setting the work directory
-WORKDIR /home/node/app
+# Install all node_modules, including dev dependencies
+FROM base as deps
 
-# copy package.json -> workdir
-COPY package*.json ./
+WORKDIR /myapp
 
-# installing dependencies
-RUN npm install
+ADD package.json .npmrc ./
+RUN npm install --production=false
 
-# grant permission to "node" user
-COPY --chown=node:node . .
+# Setup production node_modules
+FROM base as production-deps
 
-# will build remix app
-RUN npm run build 
+WORKDIR /myapp
 
-CMD ["npm", "run" ,"start"]
+COPY --from=deps /myapp/node_modules /myapp/node_modules
+ADD package.json .npmrc ./
+RUN npm prune --production
+
+# Build the app
+FROM base as build
+
+WORKDIR /myapp
+
+COPY --from=deps /myapp/node_modules /myapp/node_modules
+
+# ADD prisma .
+# RUN npx prisma generate
+
+ADD . .
+RUN npm run build
+
+# Finally, build the production image with minimal footprint
+FROM base
+
+WORKDIR /myapp
+
+COPY --from=production-deps /myapp/node_modules /myapp/node_modules
+#COPY --from=build /myapp/node_modules/.prisma /myapp/node_modules/.prisma
+
+COPY --from=build /myapp/build /myapp/build
+COPY --from=build /myapp/public /myapp/public
+ADD . .
+
+CMD ["npm", "start"]
