--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "author": "Clockdown team",
     "description": "Clockdown backend service",
     "scripts": {
-        "prodution": "node app.js",
+        "start": "node app.js",
         "dev:staging": "set NODE_ENV=staging && nodemon -r dotenv/config app.js dotenv_config_path=.env.staging",
         "dev:local": "set NODE_ENV=local && nodemon -r dotenv/config app.js dotenv_config_path=.env.local",
         "db-create": "cd database && npx sequelize-cli db:create",
