--- a/website-editor/package.json
+++ b/website-editor/package.json
@@ -7,10 +7,11 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.1",
+    "@chakra-ui/react": "^2.3.6",
     "@emotion/cache": "^11.9.3",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
     "@fontsource/inter": "^4.5.11",
     "@react-icons/all-files": "^4.1.0",
     "@remix-run/node": "^1.7.2",
@@ -18,7 +19,7 @@
     "@remix-run/serve": "^1.7.2",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.3",
-    "framer-motion": "^6.3.16",
+    "framer-motion": "^6.5.1",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-fs-backend": "^2.0.0",
