--- a/website/package.json
+++ b/website/package.json
@@ -2,13 +2,10 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-s \"build:*\"",
-    "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
-    "dev": "run-p \"dev:*\"",
-    "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
-    "generate:css": "npx tailwindcss -o ./app/tailwind.css",
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "start": "remix-serve build"
   },
   "dependencies": {
@@ -29,10 +26,13 @@
     "@remix-run/eslint-config": "*",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.5.0",
     "eslint": "^8.10.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.18",
     "prettier-plugin-tailwindcss": "^0.1.8",
-    "tailwindcss": "^3.1.0",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.7.4"
   },
   "engines": {
