--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.8.1",
     "@remix-run/node": "*",
     "@remix-run/react": "*",
     "@remix-run/serve": "*",
