--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -31,8 +31,8 @@ WORKDIR /myapp
 
 COPY --from=deps /myapp/node_modules /myapp/node_modules
 
-# ADD prisma .
-# RUN npx prisma generate
+ADD prisma .
+RUN npx prisma generate
 
 ADD . .
 RUN npm run build
@@ -43,7 +43,7 @@ FROM base
 WORKDIR /myapp
 
 COPY --from=production-deps /myapp/node_modules /myapp/node_modules
-#COPY --from=build /myapp/node_modules/.prisma /myapp/node_modules/.prisma
+COPY --from=build /myapp/node_modules/.prisma /myapp/node_modules/.prisma
 
 COPY --from=build /myapp/build /myapp/build
 COPY --from=build /myapp/public /myapp/public
