--- a/website/package.json
+++ b/website/package.json
@@ -37,6 +37,8 @@
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.18.6",
+    "remix-auth": "^3.3.0",
+    "remix-auth-form": "^1.2.0",
     "remix-i18next": "^4.1.1",
     "scheduler": "^0.23.0",
     "swr": "^1.3.0",
