--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev": "dotenv -e .env.local -- concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "start": "npm run prisma:migrate:prod && remix-serve build",
     "prisma:introspect:local": "dotenv -e .env.local -- npx prisma db pull",
