--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "widget:build": "cd widget && npm run build",
     "widget:pub": "copyfiles -f ./widget/public/* ./website/public/widget",
     "widget:deploy": "npm run widget:migrate && npm run widget:build && npm run widget:pub",
-    "docker:up": "npm run widget:deploy && docker compose -f docker-compose.yml up -d --build",
-    "docker:up:no-cache": "npm run widget:deploy && docker compose -f docker-compose.yml up -d --build --no-cache",
+    "docker:local:up": "npm run widget:deploy && docker compose -p clockdown-local -f docker-compose.local.yml up -d --build",
+    "docker:prod:up": "npm run widget:deploy && docker compose -p clockdown-prod -f docker-compose.yml up -d --build",
+    "docker:prod:up:no-cache": "npm run widget:deploy && docker compose -f docker-compose.yml up -d --build --no-cache",
     "stop": "docker compose -f docker-compose.yml down"
   }
 }
