--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-    "build": "npm run build:css && remix build",
+    "build": "npm run rm && npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "dev": "dotenv -e .env.local -- concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
@@ -14,8 +14,8 @@
     "prisma:local:generate": "dotenv -e .env.local -- npx prisma generate",
     "prisma:local:seed": "dotenv -e .env.local -- npx prisma db seed",
     "prisma:prod:migrate": "dotenv -e .env -- npx prisma migrate deploy",
-    "start": "npm run prisma:prod:migrate && remix-serve build",
-    "rm": "rm -rf /build"
+    "start": "remix-serve build",
+    "rm": "rm -rf ./build/*.* && rm -rf ./public/build/*.*"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.9",
