--- a/website/package.json
+++ b/website/package.json
@@ -49,7 +49,8 @@
     "remix-i18next": "^4.1.1",
     "scheduler": "^0.23.0",
     "swr": "^1.3.0",
-    "use-context-selector": "^1.4.1"
+    "use-context-selector": "^1.4.1",
+    "use-debouncy": "^4.3.0"
   },
   "devDependencies": {
     "@remix-run/dev": "*",
