--- a/website/package.json
+++ b/website/package.json
@@ -5,8 +5,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-    "build": "npm run rm && npm run build:css && remix build",
+    "build:rm": "rm -rf ./build/*.* && rm -rf ./public/build/*.*",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
+    "build": "npm run build:rm && npm run build:css && remix build",
     "dev": "dotenv -e .env.local -- concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "prisma:local:introspect": "dotenv -e .env.local -- npx prisma db pull",
@@ -14,11 +15,13 @@
     "prisma:local:generate": "dotenv -e .env.local -- npx prisma generate",
     "prisma:local:seed": "dotenv -e .env.local -- npx prisma db seed",
     "prisma:prod:migrate": "dotenv -e .env -- npx prisma migrate deploy",
-    "start": "npm run prisma:prod:migrate && remix-serve build",
-    "start:local": "remix-serve build",
-    "rm": "rm -rf ./build/*.* && rm -rf ./public/build/*.*"
+    "start:deploy": "npm run prisma:prod:migrate && remix-serve build",
+    "start": "remix-serve build"
   },
   "dependencies": {
+    "@remix-run/node": "*",
+    "@remix-run/react": "*",
+    "@remix-run/serve": "*",
     "@chakra-ui/react": "^1.8.9",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
@@ -28,9 +31,6 @@
     "@paypal/react-paypal-js": "^7.8.1",
     "@prisma/client": "^4.6.0",
     "@react-icons/all-files": "^4.1.0",
-    "@remix-run/node": "*",
-    "@remix-run/react": "*",
-    "@remix-run/serve": "*",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.3",
     "framer-motion": "^6.5.1",
