--- a/website/package.json
+++ b/website/package.json
@@ -19,9 +19,9 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@remix-run/node": "*",
-    "@remix-run/react": "*",
-    "@remix-run/serve": "*",
+    "@remix-run/react": "^1.8.1",
+    "@remix-run/serve": "^1.8.1",
+    "@remix-run/vercel": "^1.8.1",
     "@chakra-ui/react": "^1.8.9",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
@@ -52,8 +52,8 @@
     "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "*",
-    "@remix-run/eslint-config": "*",
+    "@remix-run/dev": "^1.8.1",
+    "@remix-run/eslint-config": "^1.8.1",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.9",
     "@types/react": "^17.0.39",
