--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "widget:serve": "copyfiles -f ./widget/public/* ./website/public/widget",
     "widget:deploy": "npm run widget:migrate && npm run widget:build && npm run widget:serve",
     "==0==": "===============================",
+    "docker:traefik:build": "docker compose -f docker-compose.traefik.yml build --no-cache",
+    "docker:traefik:commit": "docker commit traefik lanzoninicola/traefik:latest",
+    "docker:traefik:push": "docker push lanzoninicola/traefik:latest",
+    "docker:traefik:deploy": "npm run docker:traefik:build && npm run docker:traefik:commit && npm run docker:traefik:push",
+    "==1==": "===============================",
     "docker:website:build": "docker compose -f docker-compose.website.yml build --no-cache",
-    "docker:website:commit": "docker commit clockdown_website clockdown/website:latest",
-    "docker:website:push": "docker push clockdown/website:latest",
+    "docker:website:commit": "docker commit clockdown-website lanzoninicola/clockdown-website:latest",
+    "docker:website:push": "docker push lanzoninicola/clockdown-website:latest",
     "docker:website:deploy": "npm run docker:website:build && npm run docker:website:commit && npm run docker:website:push",
     "====": "===============================",
     "docker:local:up": "npm run widget:deploy && docker compose -p clockdown-local -f docker-compose.local.yml up -d --build",
