--- a/website/package.json
+++ b/website/package.json
@@ -19,18 +19,19 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@remix-run/react": "^1.8.1",
-    "@remix-run/serve": "^1.8.1",
-    "@remix-run/vercel": "^1.8.1",
     "@chakra-ui/react": "^1.8.9",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@fontsource/inter": "^4.5.11",
+    "@monaco-editor/react": "^4.4.6",
     "@paypal/react-paypal-js": "^7.8.1",
     "@prisma/client": "^4.6.0",
     "@react-icons/all-files": "^4.1.0",
+    "@remix-run/react": "^1.8.1",
+    "@remix-run/serve": "^1.8.1",
+    "@remix-run/vercel": "^1.8.1",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.3",
     "framer-motion": "^6.5.1",
