feat: create db admin route

--- a/website/.env.local
+++ b/website/.env.local
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:Telemaco1@localhost:5432/clockdown?schema=public"
+DATABASE_URL="postgresql://root:root@localhost:5432/clockdown?schema=public"
