--- a/website/package.json
+++ b/website/package.json
@@ -32,6 +32,7 @@
     "@remix-run/react": "^1.8.1",
     "@remix-run/serve": "^1.8.1",
     "@remix-run/vercel": "^1.8.1",
+    "bcryptjs": "^2.4.3",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.3",
     "framer-motion": "^6.5.1",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.8.1",
     "@remix-run/eslint-config": "^1.8.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.9",
     "@types/react": "^17.0.39",
